--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -79,6 +79,9 @@ body {
 }
 
 /* font styles*/
+.font-10{
+    font-size: 10px;
+}
 .font-12 {
     font-size: 12px;
 }
@@ -810,8 +813,8 @@ label.form-check-label:focus,
     }
 
     .best-seller .carousel-inner {
-        height: 300px;
-        width: 300px;
+        height: 270px;
+        width: 270px;
         margin: auto;
     }
 
