product detail page similar issue done. add product color variant design. checkout request page add discount details.

--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -385,6 +385,10 @@ header .nav-link:active, .nav-link:focus{
     font-size: 20px;
 }
 
+.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
+    color: #DB4834!important;
+}
+
 .section__hero .carousel-item-next,
 .carousel-item-prev,
 .carousel-item.active {
