Update Offer Menu, Update FAQ Content, Removed Cash On Delivery Tag & Menus Add on Product Page

--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -950,3 +950,7 @@ label.form-check-label:focus,
           border-radius: 50%;
       border: 3px solid #fff;
   }
+
+  .rounded-5:hover{
+    border-color: #DB4834;
+    border-radius: 500px;  }
